--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,11 @@
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.mycompany.sistemauniversidade.SistemaUniversidade</exec.mainClass>
     </properties>
+    <dependencies>
+<dependency>
+<groupId>com.mysql</groupId>
+<artifactId>mysql-connector-j</artifactId>
+<version>9.3.0</version>
+</dependency>
+</dependencies>
 </project>
